# llm_automation

./: config.py  ollama_process.py  project.toml  pyproject.toml  tool_calling_example.py  watch.py  whisper_process.py
